# weather-app

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  README  README-Autopilot.md  README-Developers.md  README-Mergeproposal.md  README-Translations.md  README.autopilot  README.md  README.translations  key.js  manifest.json.in  snapcraft.yaml  ubuntu-weather-app.apparmor  ubuntu-weather-app.desktop.in.in  ubuntu-weather-app.qmlproject  ubuntu-weather-app.url-dispatcher
app/: CMakeLists.txt  ubuntu-weather-app.qml
app/components/: CMakeLists.txt  CurrentLocation.qml  DayDelegate.qml  DayDelegateExtraInfo.qml  EmptyStateComponent.qml  ExpandableListItem.qml  FakeHeader.qml  FastScroll.js  FastScroll.qml  ForecastDetailsDelegate.qml  HeaderRow.qml  HomeGraphic.qml  HomeHourly.qml  HomePageEmptyStateComponent.qml  HomeTempInfo.qml  ListItemReorderComponent.qml  ListItemWithActions.qml  LoadingIndicator.qml  Location.qml  LocationsPageEmptyStateComponent.qml  MultiSelectHeadState.qml  MultiSelectListView.qml  NetworkErrorStateComponent.qml  NoAPIKeyErrorStateComponent.qml  PageWithBottomEdge.qml  SettingsButton.qml  StandardListItem.qml  WeatherListItem.qml
app/components/HeadState/: LocationsHeadState.qml  MultiSelectHeadState.qml
app/components/ListItemActions/: CMakeLists.txt  CheckBox.qml  Remove.qml
app/data/: CMakeLists.txt  CitiesList.js  Storage.qml  WeatherApi.js  key.js  keys.js  suncalc.js
app/graphics/: CMakeLists.txt
app/ui/: AddLocationPage.qml  AddPage.qml  CMakeLists.txt  HomePage.qml  LocationPane.qml  LocationsPage.qml  SettingsPage.qml
app/ui/Settings/: CMakeLists.txt  DataProviderPage.qml  RefreshIntervalPage.qml  UnitsPage.qml
app/ui/settings/: DataProviderPage.qml  LocationPage.qml  PrivacyPage.qml  RefreshIntervalPage.qml  UnitsPage.qml
backend/: CMakeLists.txt
click/: CMakeLists.txt  manifest.json.in  weather.apparmor
components/: CMakeLists.txt
debian/: changelog  control  copyright  qtdeclarative5-ubuntuweather-timezone-plugin1.0.install  rules  ubuntu-weather-app-autopilot.install
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  be.po  bn.po  br.po  bs.po  ca.po  com.ubuntu.weather.pot  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ku.po  lv.po  my.po  nb.po  (+23 more)
setup/gui/: ubuntu-weather-app.desktop
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt
tests/autopilot/ubuntu_weather_app/: CMakeLists.txt  __init__.py
tests/autopilot/ubuntu_weather_app/databases/: CMakeLists.txt  for_migration.conf  location_added.conf
tests/autopilot/ubuntu_weather_app/files/: 1.json  2.json  CMakeLists.txt
tests/autopilot/ubuntu_weather_app/files/legacy/: 1.json  2.json
tests/autopilot/ubuntu_weather_app/tests/: CMakeLists.txt  __init__.py  test_add_location_page.py  test_empty_state.py  test_home_page.py  test_locations_page.py  test_migration.py  test_settings_page.py  test_weather.py
tests/manual/2015.com.ubuntu.weather:weather-tests/: manage.py
tests/manual/2015.com.ubuntu.weather:weather-tests/jobs/: weather-firstrun.pxu  weather-forecasts.pxu  weather-locations.pxu  weather-settings.pxu
tests/manual/2015.com.ubuntu.weather:weather-tests/whitelists/: weather-firstrun.whitelist  weather-forecasts.whitelist  weather-locations.whitelist  weather-settings.whitelist
